--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ NODE_ENV=development
 APP_NAME=voucherfaster
 APP_PORT=3000
 API_PREFIX=/api/v1
+
+# DATABASE
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
