Can do most of the voucher. UNFINISHED WORK: finishing seeding process. Promotion part and Get voucher which need to receive all of the package not JOIN query

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nest start",
     "spawn:db": "docker compose --file docker-compose.db.yaml up",
     "stop:db": "docker-compose --file docker-compose.db.yaml down",
-    "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev",
+    "db:seed": "pnpm exec tsc prisma/seed.ts && node prisma/seed.js && rm prisma/seed.js",
+    "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev && pnpm run db:seed",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -36,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
