--- a/docker-compose.db.yaml
+++ b/docker-compose.db.yaml
@@ -1,12 +1,12 @@
 services:
   db:
     image: postgres
-    # restart: always
+    restart: always
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=voucherfaster
-    container_name: postgres
+    container_name: database
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
