--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build": "nest build",
     "format": "prettier --config ./.prettierrc --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev": "nest start",
+    "spawn:dev": "docker-compose -f docker-compose.yaml up --build",
+    "stop:dev": "docker-compose -f docker-compose.yaml down",
     "spawn:db": "docker compose --file docker-compose.db.yaml up",
     "stop:db": "docker-compose --file docker-compose.db.yaml down",
     "db:seed": "pnpm exec ts-node prisma/seed.ts",
-    "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev && pnpm run db:seed",
+    "migrate:dev": "npx prisma migrate dev && pnpm run db:seed",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
