Add package.json scripts for running server first time.

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: voucherfaster
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -39,4 +39,4 @@ services:
       - ./.env.development
 
 volumes:
-  postgres-data:
+  postgres_data:
