--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --config ./.prettierrc --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev": "nest start",
-    "spawn:dev": "docker-compose -f docker-compose.yaml up --build",
-    "stop:dev": "docker-compose -f docker-compose.yaml down",
+    "first:dev": "dotenv -e .env.development pnpm run migrate:dev && pnpm run start:dev",
+    "spawn:dev": "docker-compose -f docker-compose.dev.yaml up --build",
+    "stop:dev": "docker-compose -f docker-compose.dev.yaml down",
     "spawn:db": "docker compose --file docker-compose.db.yaml up",
     "stop:db": "docker-compose --file docker-compose.db.yaml down",
     "db:seed": "pnpm exec ts-node prisma/seed.ts",
