--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --config ./.prettierrc --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev": "nest start",
+    "first:dev": "dotenv -e .env.development pnpm run migrate:dev && pnpm run start:dev",
     "spawn:dev": "docker-compose -f docker-compose.yaml up --build",
     "stop:dev": "docker-compose -f docker-compose.yaml down",
     "spawn:db": "docker compose --file docker-compose.db.yaml up",
