--- a/docker-compose.db.yaml
+++ b/docker-compose.db.yaml
@@ -8,7 +8,7 @@ services:
       - POSTGRES_DB=voucherfaster
     container_name: database
     volumes:
-      - ./postgres-data:/var/lib/standalone-postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
 
@@ -23,3 +23,6 @@ services:
       - '5050:80'
     depends_on:
       - db
+
+volumes:
+  postgres-data:
