--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.4.7",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.16",
+    "omise": "^0.12.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
